Fixed contrast error on Ended listing in dark mode

--- a/css/output.css
+++ b/css/output.css
@@ -1481,9 +1481,9 @@ video {
   color: rgb(var(--main) / var(--tw-text-opacity, 1));
 }
 
-.text-red-500 {
+.text-red-400 {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
 }
 
 .text-red-600 {
